@@ -1,5 +1,8 @@
 # Nmap Changelog ($Id$); -*-text-*-
 
+o [NSE] Added SPNEGO authentication supporting Windows 7 and Windows 2008 to
+  the smb library. [Patrik Karlsson]
+
 o Fixed an error that occurred when scanning certain addresses like
   192.168.0.0 on Windows XP:
     get_srcaddr: can't connect socket: The requested address is not valid in its context.
